5.13/ai-management/overview.mdx
---
title: "AI management"
description: "An overview of Tyk's AI management solutions, including AI Studio for governance and deployment, and Model Context Protocol (MCP) servers for secure AI integrations."
keywords: "Tyk AI management, AI Studio, Tyk MCP Servers"
sidebarTitle: "Overview"
canonical: "https://tyk.io/docs/ai-management/overview"
---

As artificial intelligence becomes increasingly integrated into enterprise systems, organizations need structured, secure, and governed approaches to manage AI capabilities effectively. Tyk's AI management solutions are designed to help enterprises integrate, control, and scale AI applications while maintaining compliance and security.

## Secure AI for the enterprise

Tyk's AI management solutions address key challenges in AI governance, security, and integration. They enable organizations to deploy AI capabilities while maintaining oversight, managing risks, and meeting enterprise standards.

## AI integration architecture and its importance

Integrating AI into existing systems requires a structured architecture that connects models, APIs, and specialised tools securely and efficiently.

A managed AI integration architecture provides:

- **Standardisation** to ensure interoperability across AI components
- **Security** across AI workflows and data interactions
- **Governance** to monitor and control AI usage and data
- **Scalability** for enterprise-wide deployment and increasing complexity
- **Interoperability** across vendors and services

Without a structured approach, organizations risk fragmented solutions, security gaps, and unmanaged AI usage ("shadow AI"). By integrating AI into existing systems, enterprises can achieve a more secure and efficient approach to AI management.

## Tyk’s AI management capabilities

Tyk provides three key solutions for AI management:

### [AI Studio](/5.13/ai-management/ai-studio/overview)

Tyk AI Studio is a platform for managing and deploying AI applications securely and at scale. It provides:

- **Centralised governance** with role-based access control and compliance tracking
- **Cost management** through usage monitoring and budgeting tools
- **Security features** including unified access controls and credential management
- **Developer enablement** via curated AI service catalogues
- **Collaboration tools** through intuitive AI interfaces

AI Studio supports enterprises in reducing unauthorised AI usage by providing central management across all AI interactions.

[Explore AI Studio](/5.13/ai-management/ai-studio/overview)

### [MCP Gateway](/5.13/ai-management/mcp-gateway/overview)

Tyk MCP Gateway puts Tyk's API governance layer directly in front of remote MCP servers — from GitHub Copilot and Slack to internal tools built by your own teams. It provides:

- **Authentication and key management** with full OAuth 2.1 compliance, including Protected Resource Metadata discovery so MCP clients can self-configure
- **Access control** at the individual tool, resource, and prompt level — allowlist exactly which MCP primitives each agent can call
- **Traffic management** including per-tool rate limiting, timeouts, circuit breakers, and request size limits to protect upstream MCP servers
- **Unified credential management** — agents authenticate to Tyk once; Tyk handles per-vendor upstream credentials centrally
- **Observability** with per-tool analytics surfaced alongside the rest of your API traffic in the Tyk Dashboard

MCP Gateway addresses a practical governance gap: as AI agents begin calling remote MCP servers, direct connections bypass every organisational control. Routing through Tyk makes every agent connection managed, auditable, and policy-enforced.

[Explore MCP Gateway](/5.13/ai-management/mcp-gateway/overview)

### [Tyk MCP Servers](/5.13/ai-management/mcps/overview)

The [Model Context Protocol (MCP)](https://modelcontextprotocol.io/introduction) provides a standardised method for AI components to interact with external resources.

With MCPs, organizations can:

- **Integrate securely** with external AI providers and services
- **Build custom tools** for AI assistants and workflows
- **Access resources** such as files, APIs, and databases
- **Enhance AI workflows** with contextual information

MCPs help expand AI system functionality by enabling secure, standardised interactions between services.

[Explore Tyk MCP Servers](/5.13/ai-management/mcps/overview)

### How they work together

Tyk's three AI management capabilities are complementary:

- **AI Studio** offers governance, monitoring, and development tooling for managing AI applications and LLM access.
- **MCP Gateway** governs AI agent traffic to remote MCP servers — applying authentication, access control, and observability at the gateway layer.
- **Tyk MCP Servers** provide secure, standardised connections from AI systems to external services and APIs.

Together, they create a flexible, governed framework for managing AI applications and agent traffic at scale.

## Next steps

To start using Tyk's AI management capabilities:

1. Explore the [AI Studio documentation](/5.13/ai-management/ai-studio/overview)
2. Learn how [MCP Gateway](/5.13/ai-management/mcp-gateway/overview) governs AI agent traffic to remote MCP servers
3. Review [Tyk MCP Servers](/5.13/ai-management/mcps/overview) and how they extend AI systems
4. [Request a demo](https://tyk.io/ai-demo/) to see the platform in action.

## Key outcomes

Tyk's AI management solutions are designed to:

- **Reduce risk** through centralised access and monitoring
- **Improve efficiency** across AI development workflows
- **Enhance cost control** with usage and budgeting insights
- **Support compliance** with data protection and security standards
- **Enable scalable architectures** based on open protocols
